<?xml version="1.0" encoding="UTF-8"?>
<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.openchrom</groupId>
  <artifactId>parent</artifactId>
  <version>BUILD-VERSION</version>
  <packaging>pom</packaging>
  <!--
	USE MAVEN 3.0
  --> 
  <prerequisites>
    <maven>3.0</maven>
  </prerequisites>
  <!--
	PROPERTIES
  --> 
  <properties>
    <tycho-version>0.10.0</tycho-version>
    <tycho-groupid>org.sonatype.tycho</tycho-groupid>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <!--
	DESCRIPTION
  --> 
  <name>OpenChrom Third-Party Libraries</name>
  <description>
	This bundle offers several third party libries.
  </description>
  <url>http://sourceforge.net/projects/openchrom3rdpl</url>
  <!--
	LICENSES
  -->  
  <licenses>
    <license>
      <comments>ApacheCommonsCLI 1.2 (http://commons.apache.org/cli)</comments>
      <name>Apache License v2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
    <license>
      <comments>ApacheCommonsMath 2.0 (http://commons.apache.org/math)</comments>
      <name>Apache License v2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
    <license>
      <comments>DBUnit (http://www.dbunit.org)</comments>
      <name>LGPL v2.1</name>
      <url>http://www.gnu.org/licenses/lgpl-2.1.html</url>  
    </license>
    <license>
      <comments>Derby 10.5.1.1 (http://db.apache.org/derby)</comments>
      <name>Apache License v2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
    <license>
      <comments>EasyMock (http://easymock.org)</comments>
      <name>MIT License</name>
      <url>http://www.opensource.org/licenses/mit-license.php</url>
    </license>
    <license>
      <comments>EclipseLink 1.5.1 (http://www.eclipse.org/eclipselink)</comments>
      <name>EPL v1.0</name>
      <url>http://www.eclipse.org/legal/epl-v10.html</url>
    </license>
    <license>
      <comments>Findbugs (http://findbugs.sourceforge.net)</comments>
      <name>LGPL v2.1</name>
      <url>http://www.gnu.org/licenses/lgpl-2.1.html</url>
    </license>
    <license>
      <comments>iText 5.0.2 (http://itextpdf.com)</comments>
      <name>AGPL v3</name>
      <url>http://itextpdf.com/terms-of-use/index.php?page=AGPL</url>  
    </license>
    <license>
      <comments>Javabase64 1.3.1 (http://sourceforge.net/projects/java-base64)</comments>
      <name>LGPL v2.1</name>
      <url>http://www.gnu.org/licenses/lgpl-2.1.html</url> 
    </license>
    <license>
      <comments>JPA 1.99.0.v200906021518 (http://www.eclipse.org/eclipselink/jpa.php)</comments>
      <name>EPL v1.0</name>
      <url>http://www.eclipse.org/legal/epl-v10.html</url>
    </license>
    <license>
      <comments>JunitAddons (http://sourceforge.net/projects/junit-addons)</comments>
      <name>JUnit-addons Software License, Version 1.0</name>
      <url>http://sourceforge.net/projects/junit-addons</url>
    </license>
    <license>
      <comments>JunitPerf (http://clarkware.com/software/JUnitPerf.html)</comments>
      <name>BSD License</name>
      <url>http://www.clarkware.com/software/license.txt</url>
    </license>
    <license>
      <comments>Log4j 1.2.15 (http://logging.apache.org/log4j)</comments>
      <name>Apache License v2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
    <license>
      <comments>NetCDF 2.2.22 (http://www.unidata.ucar.edu/software/netcdf-java)</comments>
      <name>LGPL v2.1</name>
      <url>http://www.gnu.org/licenses/lgpl-2.1.html</url> 
    </license>
    <license>
      <comments>SWTChart 0.7.0 (http://www.swtchart.org)</comments>
      <name>EPL v1.0</name>
      <url>http://www.eclipse.org/legal/epl-v10.html</url>
    </license>
    <license>
      <comments>ProteomeCommons 6.21 (http://proteomecommons.org/current/531)</comments>
      <name>Apache License v2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses> 
  <!--
	DEVELOPERS
  -->
  <developers>
    <developer>
      <id>eselmeister</id>
      <name>Philip Wenig</name>
      <email>philip.wenig [at] gmx.net</email>
      <timezone>+1</timezone>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>
  <!--
	MODULES
  -->
  <modules>
    <!-- CommonsCLI -->
    <module>./plugins/net.openchrom.thirdpartylibraries.commons-cli</module>
    <module>./features/net.openchrom.thirdpartylibraries.commons-cli.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.commons-cli.updateSite</module>
    <!-- CommonsMath -->
    <module>./plugins/net.openchrom.thirdpartylibraries.commons-math</module>
    <module>./features/net.openchrom.thirdpartylibraries.commons-math.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.commons-math.updateSite</module>
    <!-- DBUnit -->
    <module>./plugins/net.openchrom.thirdpartylibraries.dbunit</module>
    <module>./features/net.openchrom.thirdpartylibraries.dbunit.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.dbunit.updateSite</module>    
    <!-- Derby -->
    <module>./plugins/net.openchrom.thirdpartylibraries.derby</module>
    <module>./features/net.openchrom.thirdpartylibraries.derby.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.derby.updateSite</module>
    <!-- EasyMock -->
    <module>./plugins/net.openchrom.thirdpartylibraries.easymock</module>
    <module>./features/net.openchrom.thirdpartylibraries.easymock.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.easymock.updateSite</module>
    <!-- EclipseLink -->
    <module>./plugins/net.openchrom.thirdpartylibraries.eclipselink</module>
    <module>./features/net.openchrom.thirdpartylibraries.eclipselink.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.eclipselink.updateSite</module>
    <!-- FindBugs -->
    <module>./plugins/net.openchrom.thirdpartylibraries.findbugs</module>
    <module>./features/net.openchrom.thirdpartylibraries.findbugs.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.findbugs.updateSite</module>
    <!-- iText -->
    <module>./plugins/net.openchrom.thirdpartylibraries.itext</module>
    <module>./features/net.openchrom.thirdpartylibraries.itext.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.itext.updateSite</module>
    <!-- JavaBase64 -->
    <module>./plugins/net.openchrom.thirdpartylibraries.javabase64</module>
    <module>./features/net.openchrom.thirdpartylibraries.javabase64.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.javabase64.updateSite</module>
    <!-- JPA -->
    <module>./plugins/net.openchrom.thirdpartylibraries.jpa</module>
    <module>./features/net.openchrom.thirdpartylibraries.jpa.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.jpa.updateSite</module>
    <!-- JUnitAddons -->
    <module>./plugins/net.openchrom.thirdpartylibraries.junitaddons</module>
    <module>./features/net.openchrom.thirdpartylibraries.junitaddons.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.junitaddons.updateSite</module>
    <!-- JUnitPerf -->
    <module>./plugins/net.openchrom.thirdpartylibraries.junitperf</module>
    <module>./features/net.openchrom.thirdpartylibraries.junitperf.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.junitperf.updateSite</module>
    <!-- Log4j -->
    <module>./plugins/net.openchrom.thirdpartylibraries.log4j</module>
    <module>./features/net.openchrom.thirdpartylibraries.log4j.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.log4j.updateSite</module>
    <!-- NetCDF -->
    <module>./plugins/net.openchrom.thirdpartylibraries.netcdf</module>
    <module>./features/net.openchrom.thirdpartylibraries.netcdf.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.netcdf.updateSite</module>
    <!-- SWTChart -->
    <module>./plugins/net.openchrom.thirdpartylibraries.swtchart</module>
    <module>./features/net.openchrom.thirdpartylibraries.swtchart.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.swtchart.updateSite</module>
    <!-- ProteomeCommons -->
    <module>./plugins/net.openchrom.thirdpartylibraries.proteomecommons</module>
    <module>./features/net.openchrom.thirdpartylibraries.proteomecommons.feature</module>
    <module>./updateSites/net.openchrom.thirdpartylibraries.proteomecommons.updateSite</module>
    <!-- Update Site (Selected third party libraries) -->
    <module>./updateSites/net.openchrom.thirdpartylibraries.updateSite</module>
  </modules>
  <!--
	DEPENDENCIES
  -->
  <!--
	P2 REPOSITORIES
  -->
  <repositories>
   <repository>
     <id>forge</id>
     <url>http://repository.sonatype.org/content/groups/public</url>
     <snapshots>
       <enabled>true</enabled>
     </snapshots>
     <releases>
       <enabled>true</enabled>
     </releases>
   </repository>
   <repository>
     <id>helios</id>
     <layout>p2</layout>
     <url>http://download.eclipse.org/releases/helios</url>
   </repository>
   <repository>
     <id>galileo</id>
     <layout>p2</layout>
     <url>http://download.eclipse.org/releases/galileo</url>
   </repository>
   <repository>
     <id>ganymede</id>
     <layout>p2</layout>
     <url>http://download.eclipse.org/releases/ganymede</url>
   </repository>
  </repositories>
  <!--
	PLUGIN REPOSITORIES
  -->
  <pluginRepositories>
    <pluginRepository>
      <id>forge</id>
      <url>http://repository.sonatype.org/content/groups/public</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </pluginRepository>
    <pluginRepository>
      <id>forge1</id>
      <url>http://repository.sonatype.org/content/repositories/all-001</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </pluginRepository>
  </pluginRepositories>
  <!--
	SOURCE CODE MANAGEMENT
  -->
  <scm>
    <connection>scm:git:git://openchrom3rdpl.git.sourceforge.net/gitroot/openchrom3rdpl/openchrom3rdpl</connection>
    <developerConnection>scm:git:ssh://openchrom3rdpl.git.sourceforge.net/gitroot/openchrom3rdpl/openchrom3rdpl</developerConnection>
    <url>http://openchrom3rdpl.git.sourceforge.net/git/gitweb-index.cgi</url>
  </scm>
  <!--
	BUILD
  -->
  <build>
    <!--
	PLUGINS
    -->  
    <plugins>
      <!--
	Use the maven source code management plugin.
      -->
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-scm-plugin</artifactId>
	<version>1.2</version>
	  <configuration>
	    <checkoutDirectory>.</checkoutDirectory>
	  </configuration>
      </plugin>
      <!-- 
	Tycho Maven Plugin
      -->
      <plugin>
        <groupId>${tycho-groupid}</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho-version}</version>
        <extensions>true</extensions>
      </plugin>	
      <!--
	Source and target to Java version 1.6, otherwise "method must implement @override" failures will occur.
      -->
      <plugin>
        <groupId>${tycho-groupid}</groupId>
        <artifactId>maven-osgi-compiler-plugin</artifactId>
	<version>${tycho-version}</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <!--
	Use the provisioning system p2 from Eclipse.
      -->
      <plugin>
        <groupId>${tycho-groupid}</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <resolver>p2</resolver>
        </configuration>
      </plugin>
      <!--
	Settings of the JUnit-Tests.
      -->
      <plugin>
        <groupId>${tycho-groupid}</groupId>
        <artifactId>maven-osgi-test-plugin</artifactId>
        <configuration>
          <useUIHarness>false</useUIHarness>
          <argLine>-Xmx500m -XX:MaxPermSize=256m</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
